--- a/css/styles.css
+++ b/css/styles.css
@@ -1,152 +1,213 @@
 /********************************************************/
 /*                 Page background                      */
 /********************************************************/
-body, .content { 
-	background: #fff; 
-	color:#333; 
+body, .content {
+    background: #fff;
+    color: #333;
+    margin: 0;
+    padding: 0;
 }
 
 
 /********************************************************/
 /*                     Typography                       */
 /********************************************************/
-h1, h2, h3, h4, h5, h6 { 
-	font-family: "Open sans", Helvetica, Arial;
-	font-weight: 300;
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Open sans", Helvetica, Arial;
+    font-weight: 300;
 }
 
 p, .jumbotron p {
-	font-size: 15px;
-	line-height: 1.6em;
+    font-size: 15px;
+    line-height: 1.6em;
 }
 
-a{ color: #CD503A; }
-a:hover, a:focus { color: #953726; }
-a:visited { color: #D87563; }
+a {
+    color: #CD503A;
+}
+
+a:hover, a:focus {
+    color: #953726;
+}
+
+a:visited {
+    color: #D87563;
+}
 
 /********************************************************/
 /*                        Header                        */
 /********************************************************/
 .header {
-	background: #A43222;
-	background: -moz-linear-gradient(top,  #A43222 0%, #CD503A 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#A43222), color-stop(100%,#CD503A));
-	background: -webkit-linear-gradient(top,  #A43222 0%,#CD503A 100%);
-	background: -o-linear-gradient(top,  #A43222 0%,#CD503A 100%);
-	background: -ms-linear-gradient(top,  #A43222 0%,#CD503A 100%);
-	background: linear-gradient(to bottom,  #A43222 0%,#CD503A 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#A43222', endColorstr='#CD503A',GradientType=0 ); 
-	color: white;
-	margin-bottom: 0;
-	padding-bottom: 50px;
+    background: #A43222;
+    background: -moz-linear-gradient(top, #A43222 0%, #CD503A 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #A43222), color-stop(100%, #CD503A));
+    background: -webkit-linear-gradient(top, #A43222 0%, #CD503A 100%);
+    background: -o-linear-gradient(top, #A43222 0%, #CD503A 100%);
+    background: -ms-linear-gradient(top, #A43222 0%, #CD503A 100%);
+    background: linear-gradient(to bottom, #A43222 0%, #CD503A 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#A43222', endColorstr='#CD503A', GradientType=0);
+    color: white;
+    margin-bottom: 0;
+    padding-bottom: 50px;
 }
+
 .header h1 {
-	font-family: "Open sans", Arial;
-	font-size: 40px;
-	font-weight: bold;
-	margin: 35px 0 10px 0;
-	text-align: center;
-	text-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
-	color:#F6EFDD;
+    font-family: "Open sans", Arial;
+    font-size: 40px;
+    font-weight: bold;
+    margin: 35px 0 10px 0;
+    text-align: center;
+    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
+    color: #F6EFDD;
 }
+
 .header h2 {
-	color: rgba(255,255,255,.9);
-	font-family: Georgia;
-	font-size: 17px;
-	font-weight: normal;
-	margin: 0 0 25px 0;
-	text-align: center;
-	text-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
+    color: rgba(255, 255, 255, .9);
+    font-family: Georgia;
+    font-size: 17px;
+    font-weight: normal;
+    margin: 0 0 25px 0;
+    text-align: center;
+    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
 }
-.header p { font-size: 15px; line-height: 1.2em;}
+
+.header p {
+    font-size: 15px;
+    line-height: 1.2em;
+}
+
 .header .lead {
-	font-family: "Open sans", Arial;
-	color: rgba(255,255,255,.9);
-	line-height: 1.2em;
-	font-size: 18px;
-	font-weight: 300;
-	text-align: center;
-	text-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
+    font-family: "Open sans", Arial;
+    color: rgba(255, 255, 255, .9);
+    line-height: 1.2em;
+    font-size: 18px;
+    font-weight: 300;
+    text-align: center;
+    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
 }
-.header .small { 
-	font-size: 0.9em;
-	line-height: 1.2em;
-	text-align: center;
-	text-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
-}
-.header .text-muted { color:white; opacity: 0.5; }
 
-.header form { margin-bottom: 18px; }
-.header .form-control { background: rgba(5,5,5,0.4); border: 0; color: white; font-size:15px;}
-.header .form-control::-webkit-input-placeholder { color: rgba(255,255,255,0.3); }
-.header .form-control:-moz-placeholder { color: rgba(255,255,255,0.3); }
-.header .form-control::-moz-placeholder { color: rgba(255,255,255,0.3); }
-.header .form-control:-ms-input-placeholder { color: rgba(255,255,255,0.3); }
+.header .small {
+    font-size: 0.9em;
+    line-height: 1.2em;
+    text-align: center;
+    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
+}
+
+.header .text-muted {
+    color: white;
+    opacity: 0.5;
+}
+
+.header form {
+    margin-bottom: 18px;
+}
+
+.header .form-control {
+    background: rgba(5, 5, 5, 0.4);
+    border: 0;
+    color: white;
+    font-size: 15px;
+}
+
+.header .form-control::-webkit-input-placeholder {
+    color: rgba(255, 255, 255, 0.3);
+}
+
+.header .form-control:-moz-placeholder {
+    color: rgba(255, 255, 255, 0.3);
+}
+
+.header .form-control::-moz-placeholder {
+    color: rgba(255, 255, 255, 0.3);
+}
+
+.header .form-control:-ms-input-placeholder {
+    color: rgba(255, 255, 255, 0.3);
+}
+
 .header .btn-default {
-	background: rgba(255,255,255,.06);
-	border: 1px solid rgba(255,255,255,.8);
-	color: rgba(255,255,255,.8);
-	font-size:15px;
-	padding: 12px 36px;
+    background: rgba(255, 255, 255, .06);
+    border: 1px solid rgba(255, 255, 255, .8);
+    color: rgba(255, 255, 255, .8);
+    font-size: 15px;
+    padding: 12px 36px;
 }
 
-.btn-dark{
-	background-color: #333333;
+.btn-dark {
+    background-color: #333333;
 }
 
-.btn-dark:hover{
-	color: #999999;
+.btn-dark:hover {
+    color: #999999;
 }
 
-.btn-dark:focus{
-	color: #999999;
+.btn-dark:focus {
+    color: #999999;
 }
 
 /********************************************************/
 /*          Illustration and its animation              */
 /********************************************************/
-#illustration { z-index: 1; text-align: center; width:100%; margin-bottom:-130px;}
-#illustration img {
-	max-width:100%;
-	-webkit-transition: all 0.8s;
-	-o-transition: all 0.8s;
-	-moz-transition: all 0.8s;
-	transition: all 0.8s;
+#illustration {
+    z-index: 1;
+    text-align: center;
+    width: 100%;
+    margin-bottom: -130px;
 }
-.expand img{ margin-bottom:120px; margin-top:-100px; }
 
+#illustration img {
+    max-width: 100%;
+    -webkit-transition: all 0.8s;
+    -o-transition: all 0.8s;
+    -moz-transition: all 0.8s;
+    transition: all 0.8s;
+}
+
+.expand img {
+    margin-bottom: 120px;
+    margin-top: -100px;
+}
 
 
 /********************************************************/
 /*                       Content                        */
 /********************************************************/
 
-.content { 
-	position: relative; 
-	z-index: 999; 
-	margin-bottom:40px;  
+.content {
+    position: relative;
+    z-index: 999;
+    margin-bottom: 40px;
 }
 
-.jumbotron { 
-	background:#f5f5f5;
-	margin-bottom: 0;
+.jumbotron {
+    background: #f5f5f5;
+    margin-bottom: 0;
 }
 
-.content .lead { font-family: Georgia; font-style: italic; color:#999; }
+.content .lead {
+    font-family: Georgia;
+    font-style: italic;
+    color: #999;
+}
 
-.space-before { padding-top:20px; }
-.space-after { padding-bottom:20px; }
+.space-before {
+    padding-top: 20px;
+}
 
-.img-feature { 
-	border:15px solid #f5f5f5;
-	margin:0 auto;
-	-webkit-border-radius: 50% ;
-	-moz-border-radius: 50% ;
-	border-radius: 50%;
-	padding:1px;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+.space-after {
+    padding-bottom: 20px;
+}
+
+.img-feature {
+    border: 15px solid #f5f5f5;
+    margin: 0 auto;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    padding: 1px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 
@@ -155,38 +216,93 @@ a:visited { color: #D87563; }
 /********************************************************/
 
 @media (max-width: 767px) {
-	h1, h2, h3, h4 { text-align: center;}
+    h1, h2, h3, h4 {
+        text-align: center;
+    }
 }
 
 @media (min-width: 482px) {
-	.header h1 { font-size: 55px; }
-	.header h2 { font-size: 30px; }
-	.header p { font-size: 15px; }
+    .header h1 {
+        font-size: 55px;
+    }
 
-	#illustration { margin-bottom:-215px;}
-	.expand img{ margin-bottom:200px; margin-top:-180px; }
+    .header h2 {
+        font-size: 30px;
+    }
+
+    .header p {
+        font-size: 15px;
+    }
+
+    #illustration {
+        margin-bottom: -215px;
+    }
+
+    .expand img {
+        margin-bottom: 200px;
+        margin-top: -180px;
+    }
 }
+
 @media (min-width: 768px) {
-	.header h1 { font-size: 55px; }
-	.header h2 { font-size: 20px; }
-	.header p { font-size: 15px; }
-	.header .lead { font-size:22px; }
+    .header h1 {
+        font-size: 55px;
+    }
 
-	#illustration { margin-bottom:-310px;}
-	.expand img{ margin-bottom:300px; margin-top:-190px; }
+    .header h2 {
+        font-size: 20px;
+    }
+
+    .header p {
+        font-size: 15px;
+    }
+
+    .header .lead {
+        font-size: 22px;
+    }
+
+    #illustration {
+        margin-bottom: -310px;
+    }
+
+    .expand img {
+        margin-bottom: 300px;
+        margin-top: -190px;
+    }
 
 }
+
 @media (min-width: 992px) {
 
-	.header h1 { font-size: 55px; margin-top: 50px; }
-	.header h2 { margin-bottom: 40px;}
-	.header p { font-size: 15px; }
+    .header h1 {
+        font-size: 55px;
+        margin-top: 50px;
+    }
 
-	#illustration { margin-bottom:-380px;}
-	.expand img{ margin-bottom:370px; margin-top:-260px; }
+    .header h2 {
+        margin-bottom: 40px;
+    }
 
-	.space-before { padding-top:40px; }
-	.space-after { padding-bottom:40px; }
+    .header p {
+        font-size: 15px;
+    }
+
+    #illustration {
+        margin-bottom: -380px;
+    }
+
+    .expand img {
+        margin-bottom: 370px;
+        margin-top: -260px;
+    }
+
+    .space-before {
+        padding-top: 40px;
+    }
+
+    .space-after {
+        padding-bottom: 40px;
+    }
 
 }
 
@@ -194,26 +310,26 @@ a:visited { color: #D87563; }
 /*                     Réseaux sociaux                  */
 /********************************************************/
 
-#footer-1{
-	text-align: center;
-	display: flex;
-	flex-direction: column;
+#footer-1 {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
-#rs{
-	justify-content: space-between;
-	display: flex;
-	margin: 0 120px;
+#rs {
+    justify-content: space-between;
+    display: flex;
+    margin: 0 120px;
 }
 
-#rs img{
-	flex-direction: row;
-	width: 38px;
-	height: auto;
+#rs img {
+    flex-direction: row;
+    width: 38px;
+    height: auto;
 }
 
-#footer-2{
-	text-align: center;
+#footer-2 {
+    text-align: center;
 }
 
 /********************************************************/
@@ -274,83 +390,140 @@ a:visited { color: #5A8B86; }
 /*                     Account forms                    */
 /********************************************************/
 
-#sign-up-div{
-	display: none;
+#sign-up-div {
+    display: none;
 }
 
 .transition {
-	-webkit-transition: all 0.2s ease;
-	-moz-transition: all 0.2s ease;
-	-ms-transition: all 0.2s ease;
-	-o-transition: all 0.2s ease;
-	transition: all 0.2s ease;
-}
-#switch {
-	font-size: 0;
-	background-color: #CD503A;
-	display: inline-block;
-	color: #F6EFDD;
-	padding: 4px;
-	vertical-align: middle;
-}
-#switch .choice {
-	font-size: 16px;
-	width: 150px;
-	height: 45px;
-	line-height: 30px;
-	text-align: center;
-	padding: 8px;
-	display: inline-block;
-	cursor: pointer;
-	-webkit-transition: all 0.2s ease;
-	-moz-transition: all 0.2s ease;
-	-ms-transition: all 0.2s ease;
-	-o-transition: all 0.2s ease;
-	transition: all 0.2s ease;
-	vertical-align: middle;
-}
-#switch .choice.on {
-	color: #fff;
-	background-color: #A43222;
-}
-#switch .or {
-	font-size: 10px;
-	color: #fff;
-	position: absolute;
-	margin-top: 19px;
-	margin-left: 108px;
-	z-index: 1;
-}
-#switch .diamond {
-	position: absolute;
-	width: 20px;
-	height: 20px;
-	margin-top: 19px;
-	margin-left: 150px;
-	background: #CD503A;
-	-webkit-transform: rotate(-45deg);
-	-moz-transform: rotate(-45deg);
-	-ms-transform: rotate(-45deg);
-	-o-transform: rotate(-45deg);
-	transform: rotate(-45deg);
-	-webkit-transform-origin: 0 100%;
-	-moz-transform-origin: 0 100%;
-	-ms-transform-origin: 0 100%;
-	-o-transform-origin: 0 100%;
-	transform-origin: 0 100%;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -ms-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    transition: all 0.2s ease;
 }
 
-.form-field{
-	justify-content: space-evenly;
-	display: flex;
-	margin: 5px 0;
-	padding: 0 150px;
+#switch {
+    font-size: 0;
+    background-color: #CD503A;
+    display: inline-block;
+    color: #F6EFDD;
+    padding: 4px;
+    vertical-align: middle;
+}
+
+#switch .choice {
+    font-size: 16px;
+    width: 150px;
+    height: 45px;
+    line-height: 30px;
+    text-align: center;
+    padding: 8px;
+    display: inline-block;
+    cursor: pointer;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -ms-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+    vertical-align: middle;
+}
+
+#switch .choice.on {
+    color: #fff;
+    background-color: #A43222;
+}
+
+#switch .or {
+    font-size: 10px;
+    color: #fff;
+    position: absolute;
+    margin-top: 19px;
+    margin-left: 108px;
+    z-index: 1;
+}
+
+#switch .diamond {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    margin-top: 19px;
+    margin-left: 150px;
+    background: #CD503A;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    -webkit-transform-origin: 0 100%;
+    -moz-transform-origin: 0 100%;
+    -ms-transform-origin: 0 100%;
+    -o-transform-origin: 0 100%;
+    transform-origin: 0 100%;
+}
+
+.form-field {
+    justify-content: space-evenly;
+    display: flex;
+    margin: 5px 0;
+    padding: 0 150px;
 }
 
 form > div {
-	margin: 10px -15px;
+    margin: 10px -15px;
 }
 
-#sign-in-submit:hover, #sign-up-submit:hover{
-	background-color: #ff999975;
+#sign-in-submit:hover, #sign-up-submit:hover, #play-button:hover {
+    background-color: #ff999975;
+}
+
+#sign-out {
+    position: absolute;
+    right: 25px;
+    top: 25px;
+}
+
+#login-error {
+    background: linear-gradient(to bottom, #A43222 0%, #CD503A 100%);
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#login-error h1 {
+    font-size: 50px;
+    font-weight: bold;
+}
+
+#login-error p {
+    font-size: 24px;
+    font-family: "Open sans", Arial;
+}
+
+#login-error a {
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: bold;
+}
+
+#login-error a:hover {
+    color: #A43222;
+}
+
+#login-error button {
+    background: rgba(255, 255, 255, .06);
+    border: 1px solid rgba(255, 255, 255, .8);
+    color: rgba(255, 255, 255, .8);
+    font-size: 15px;
+    padding: 12px 36px;
+    margin: 25px 0;
+}
+
+#login-error button:hover {
+    background-color: #ff999975;
+
 }
