--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,14 @@
 /********************************************************/
 /*                 Page background                      */
 /********************************************************/
+html {
+    height: 100%;
+}
+
+body {
+    min-height: 100%;
+}
+
 body, .content {
     background: #fff;
     color: #333;
@@ -8,6 +16,13 @@ body, .content {
     padding: 0;
 }
 
+input {
+    color: #333333;
+}
+
+a {
+    text-decoration: none;
+}
 
 /********************************************************/
 /*                     Typography                       */
@@ -34,10 +49,19 @@ a:visited {
     color: #D87563;
 }
 
+#home-title h2 {
+    font-family: "Open sans", Arial;
+    font-size: 40px;
+    font-weight: bold;
+    margin: 35px 0 10px 0;
+    text-align: center;
+    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
+}
+
 /********************************************************/
 /*                        Header                        */
 /********************************************************/
-.header {
+.header, #footer{
     background: #A43222;
     background: -moz-linear-gradient(top, #A43222 0%, #CD503A 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #A43222), color-stop(100%, #CD503A));
@@ -51,7 +75,7 @@ a:visited {
     padding-bottom: 50px;
 }
 
-.header h1 {
+h1 {
     font-family: "Open sans", Arial;
     font-size: 40px;
     font-weight: bold;
@@ -176,7 +200,7 @@ a:visited {
 .content {
     position: relative;
     z-index: 999;
-    margin-bottom: 40px;
+    /*margin-bottom: 40px;*/
 }
 
 .jumbotron {
@@ -210,6 +234,11 @@ a:visited {
     box-sizing: border-box;
 }
 
+.featurelist {
+    display: flex;
+    align-items: center;
+    /*justify-content: center;*/
+}
 
 /********************************************************/
 /*                   Responsiveness                     */
@@ -330,6 +359,20 @@ a:visited {
 
 #footer-2 {
     text-align: center;
+}
+
+#footer a:hover, #footer a.muted-link:hover {
+    color: #D87563;
+}
+
+#footer a {
+    color: #F6EFDD;
+    text-decoration: none;
+}
+
+#footer a.muted-link {
+    color: #999999;
+    font-weight: bold;
 }
 
 /********************************************************/
@@ -469,7 +512,7 @@ a:visited { color: #5A8B86; }
 }
 
 form > div {
-    margin: 10px -15px;
+    margin: 40px -15px;
 }
 
 #sign-in-submit:hover, #sign-up-submit:hover, #play-button:hover {
@@ -482,16 +525,22 @@ form > div {
     top: 25px;
 }
 
-#login-error {
+#login-error, body{
     background: linear-gradient(to bottom, #A43222 0%, #CD503A 100%);
     color: #ffffff;
-    display: flex;
-    justify-content: center;
     text-align: center;
-    flex-direction: column;
     height: 100%;
     margin: 0;
     padding: 0;
+}
+
+#join-lobby-body {
+    /*display: flex;*/
+    justify-content: center;
+}
+
+#login-error {
+    flex-direction: column;
 }
 
 #login-error h1 {
@@ -549,3 +598,28 @@ form > div {
     display: flex;
     justify-content: center;
 }
+
+#choice-lobby-div, #join-lobby-div{
+    margin: 250px 0;
+    justify-content: center;
+    display: flex;
+}
+
+#join-lobby-div {
+    display: none;
+}
+
+#enter-game-code {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#bonus-img, #roles-img{
+    /*width: 250px;*/
+    height: auto;
+    font-size: 250px;
+    color: #A43222;
+}
+
+
